--- a/app/src/main/res/layout/activity_add_homework.xml
+++ b/app/src/main/res/layout/activity_add_homework.xml
@@ -14,12 +14,12 @@
         android:layout_margin="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
+        app:srcCompat="@drawable/ic_baseline_delete_24"
         android:contentDescription="TODO" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/titleInputLayout"
-        android:layout_width="0dp"
+        android:id="@+id/textInputLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         app:layout_constraintTop_toBottomOf="@id/btn_delete"
@@ -27,10 +27,11 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <EditText
-            android:id="@+id/edtTitle"
+            android:id="@+id/edt_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="title"
+            android:autofillHints=""
+            android:hint="@string/title"
             android:inputType="textCapSentences"
             android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -40,27 +41,28 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        app:layout_constraintTop_toBottomOf="@id/titleInputLayout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
+        app:layout_constraintStart_toStartOf="@id/textInputLayout"
+        app:layout_constraintEnd_toEndOf="@id/textInputLayout">
 
         <EditText
-            android:id="@+id/edtDescription"
+            android:id="@+id/edt_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="description"
+            android:hint="@string/description"
             android:inputType="textCapSentences"
-            android:maxLines="5" />
+            android:maxLines="1"
+            android:autofillHints=""/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btnSubmit"
+        android:id="@+id/btn_submit"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="submit"
+        android:text="@string/submit"
         app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="@id/textInputLayout2"
+        app:layout_constraintEnd_toEndOf="@id/textInputLayout2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
